--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,10 +4,9 @@ body {
     max-width: 650px;
     margin: 0 auto;
     padding: 0 16px;
-
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* browser height*/
+    min-height: 100vh; /* browser height */
 }
 
 .main-content {
@@ -27,7 +26,7 @@ header {
 }
 
 h1 {
-    font-size: 64px;
+    font-size: 54px;
     margin-bottom: 16px;
 }
 
@@ -38,7 +37,8 @@ header a {
 }
 
 .portrait {
-    width: 250px;
+    width: 65%;
+    border-radius: 15px 50px;
 }
 
 input {
@@ -52,4 +52,42 @@ button {
     background-color: #888888;
     color: white;
     padding: 8px;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+}
+
+.image {
+    width: 50%;
+}
+
+.text {
+    width: 50%;
+}
+
+.socials {
+    text-align: center;
+    width: 65%;
+}
+
+i {
+    font-size: 25px;
+    padding-right: 5px;
+    color: #333333;
+}
+
+.api_logos img {
+    background-color: #333333;
+    width: 25%;
+}
+
+.api {
+    display: flex;
+    flex-direction: row;
+}
+
+.api a {
+    text-decoration: none;
 }
