--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,7 +5,6 @@
         <title>About</title>
         <link rel="icon" href="/img/favicon.png">
         <link rel="stylesheet" href="/css/styles.css">
-        <script src="https://kit.fontawesome.com/593d1e5026.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="main-content">
@@ -20,8 +19,8 @@
                     </div>
                 </div>
                 <div class="text">
-                    <p>This simple web application tells the weather of a location.</p>
-                    <p>It consumes two APIs to retrieve instant, accurate weather information for any location precisely.</p>
+                    <p>This simple web application tells the weather of any location.</p>
+                    <p>It consumes two APIs to retrieve instant, accurate weather information.</p>
                     <div class="api_logos">
                         <div class="api">
                             <img src="/img/mapbox.png" alt="">
@@ -36,5 +35,6 @@
             </div>
         </div>
         {{>footer}}
+        <script src="https://kit.fontawesome.com/593d1e5026.js" crossorigin="anonymous"></script>
     </body>
 </html>
